[package]
name = "conv-memory"
version = "0.1.0"
edition = "2021"

[features]
default = []
embedding-runtime = ["llama_cpp", "num_cpus"]

[lib]
name = "conv_memory"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
llama_cpp = { version = "0.3.2", features = ["metal"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"] }
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
num_cpus = { version = "1", optional = true }
walkdir = "2"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "performance"
harness = false

[patch.crates-io]
which = { path = "vendor/which-4.4.2" }
home = { path = "vendor/home-0.5.11" }
